fixing profile cover spacing in create profile and social media path

--- a/app/_ui/Profile_Cover_Box/Profile_Cover_Box.module.css
+++ b/app/_ui/Profile_Cover_Box/Profile_Cover_Box.module.css
@@ -9,7 +9,6 @@
 .background_cover {
     background-color: var(--blue-primary);
     width: 100%;
-    height: 320px !important;
     min-height: 320px !important;
     max-height: 320px !important;
     display: flex;
@@ -98,7 +97,7 @@
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     width: 100%;
     max-width: 393px;
     margin: 0;
